Fix index.html div resizing, that now works on mobile screens.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -141,13 +141,13 @@
 
 @media (max-width: 600px) {
   .hero-section{
+  display: flex;
   padding: 0%;
   flex-direction: column;
   width:100%;
-  height: auto;
+  height: 60dvh;
+  gap:0.5rem;
   overflow:visible;
-  gap:0;
-  
   }
 
   .bio {
@@ -157,8 +157,8 @@
   .hero-image-container{
     margin: 0;
     flex:none;
-    width: 90dvw;
-    height: 33dvh;
+    width: 100%;
+    height: 66%;
     justify-content: center;
     
   }
@@ -175,22 +175,24 @@
     left:50%;
     transform: translateX(-50%) translateY(-50%);
     top: 50%;
-
   }
 
   .hero-text {
-    width: 90dvw;
-    height: 17dvh;
+    width: 100%;
+    height: 34%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
   }
   .hero-logo {
-    width:100%;
-    padding-left: 60px;
-    padding-right: 60px;
+    max-height: 50%;
+    width: auto;
+    object-fit: contain;
   }
 
   .hero-tagline {
     text-align: center;
-    font-size: 1rem;
-    padding-left: 10px;
+    height: auto;
   }
 }
